# Nexora_V3

back-end/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LICENSE  PRODUCTION_CONFIGURATION_GUIDE.md  README.md  SERVER_DEPLOYMENT_GUIDE.md  SSL-SETUP-GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  eLanka_Chat_AI_Complete_API.postman_collection.json  pre-deploy-check.sh  pyproject.toml  requirements.txt  run.py  run_api.py  scrapy.cfg
back-end/docs/: SRS.md
back-end/nginx/: default.conf
back-end/scripts/: dev-up.ps1  start-dev.ps1
back-end/src/elanka_chat_ai/: __init__.py  config.py  main.py  test_connections.py
back-end/src/elanka_chat_ai/api/: app.py  dependencies.py  health_monitor.py  models.py
back-end/src/elanka_chat_ai/api/routes/: admin.py  auth.py  chat.py  data_collection.py  ingest.py  notification.py  system.py
back-end/src/elanka_chat_ai/crawler/: manager.py  settings.py  spider.py
back-end/src/elanka_chat_ai/nexora001/: __init__.py  config.py  main.py  test_connections.py
back-end/src/elanka_chat_ai/nexora001/api/: app.py  dependencies.py  health_monitor.py  models.py  security.py
back-end/src/elanka_chat_ai/nexora001/rag/: pipeline.py  (+2 more)
back-end/src/elanka_chat_ai/processors/: chunker.py  docx_processor.py  embeddings.py  pdf_processor.py
back-end/src/elanka_chat_ai/rag/: generator.py  pipeline.py  retriever.py
back-end/src/elanka_chat_ai/services/: email_service.py
back-end/src/elanka_chat_ai/storage/: mongodb.py  qdrant_storage.py  vector_search.py
back-end/tests/: __init__.py  test_config.py
(+63 files in other folders)
