[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexora001"
version = "0.1.0"
description = "AI-Powered Knowledge Base Chatbot with RAG"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Bhanura"}
]

[project.scripts]
nexora001 = "nexora001.main:main"

[tool. setuptools.packages. find]
where = ["src"]